--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -19,7 +19,7 @@
           android:checkable="false"
           android:orderInCategory="1"
           app:showAsAction="ifRoom"
-        android:title="发送"/>
+        android:title="发消息"/>
     <item android:id="@+id/menu_send_pic"
         android:checkable="false"
         android:orderInCategory="1"
